--- a/02/dz-17-2.md
+++ b/02/dz-17-2.md
@@ -50,9 +50,13 @@ core_fraction=5 создаёт ВМ, которая будет иметь дос
 В качестве решения приложите:
 
 - скриншот ЛК Yandex Cloud с созданной ВМ, где видно внешний ip-адрес;
-![17-2-1](./img/17-2-1.png)
+
+![17-2-1](img/17-2-1.png)
+
 - скриншот консоли, curl должен отобразить тот же внешний ip-адрес;
-![17-2-2](./img/17-2-2.png)
+
+![17-2-2](img/17-2-2.png)
+
 - ответы на вопросы.
 
 
