--- a/02/dz-17-2.md
+++ b/02/dz-17-2.md
@@ -1,27 +1,5 @@
 # Домашнее задание к занятию «Основы Terraform. Yandex Cloud» -Рыбакин Алексей
 
-### Цели задания
-
-1. Создать свои ресурсы в облаке Yandex Cloud с помощью Terraform.
-2. Освоить работу с переменными Terraform.
-
-
-### Чек-лист готовности к домашнему заданию
-
-1. Зарегистрирован аккаунт в Yandex Cloud. Использован промокод на грант.
-2. Установлен инструмент Yandex CLI.
-3. Исходный код для выполнения задания расположен в директории [**02/src**](https://github.com/netology-code/ter-homeworks/tree/main/02/src).
-
-
-### Задание 0
-
-1. Ознакомьтесь с [документацией к security-groups в Yandex Cloud](https://cloud.yandex.ru/docs/vpc/concepts/security-groups?from=int-console-help-center-or-nav). 
-Этот функционал понадобится к следующей лекции.
-
-------
-### Внимание!! Обязательно предоставляем на проверку получившийся код в виде ссылки на ваш github-репозиторий!
-------
-
 ### Задание 1
 В качестве ответа всегда полностью прикладывайте ваш terraform-код в git.  Убедитесь что ваша версия **Terraform** =1.5.Х (версия 1.6.Х может вызывать проблемы с Яндекс провайдером) 
 
@@ -59,15 +37,61 @@ core_fraction=5 создаёт ВМ, которая будет иметь дос
 
 - ответы на вопросы.
 
-
-
-
 ### Задание 2
 
 1. Замените все хардкод-**значения** для ресурсов **yandex_compute_image** и **yandex_compute_instance** на **отдельные** переменные. К названиям переменных ВМ добавьте в начало префикс **vm_web_** .  Пример: **vm_web_name**.
 2. Объявите нужные переменные в файле variables.tf, обязательно указывайте тип переменной. Заполните их **default** прежними значениями из main.tf. 
 3. Проверьте terraform plan. Изменений быть не должно. 
 
+```
+
+  variable "vm_web_name" {
+  type        = string
+  default     = "netology-develop-platform-web"
+  description = "name"
+}
+  variable "vm_web_platform" {
+  type        = string
+  default     = "standard-v1"
+  description = "platform_id"
+}
+  variable "vm_web_cores" {
+  type        = number
+  default     = "2"
+  description = "cores"
+}
+  variable "vm_web_memory" {
+  type        = number
+  default     = "1"
+  description = "memory"
+}
+  variable "vm_web_core" {
+  type        = number
+  default     = "5"
+  description = "core_fraction"
+}
+  variable "vm_web_image_id" {
+  type        = string
+  default     = "data.yandex_compute_image.ubuntu.image_id"
+  description = "image_id"
+}
+  variable "vm_web_preemptible" {
+  type        = bool
+  default     = "true"
+  description = "preemptible"
+}
+  variable "vm_web_subnet" {
+  type        = string
+  default     = "yandex_vpc_subnet.develop.id"
+  description = "subnet_id"
+}
+  variable "vm_web_nat" {
+  type        = bool
+  default     = "true"
+  description = "nat"
+}
+
+```
 
 ### Задание 3
 
@@ -122,81 +146,3 @@ core_fraction=5 создаёт ВМ, которая будет иметь дос
   
 5. Найдите и закоментируйте все, более не используемые переменные проекта.
 6. Проверьте terraform plan. Изменений быть не должно.
-
-------
-
-## Дополнительное задание (со звёздочкой*)
-
-**Настоятельно рекомендуем выполнять все задания со звёздочкой.**   
-Они помогут глубже разобраться в материале. Задания со звёздочкой дополнительные, не обязательные к выполнению и никак не повлияют на получение вами зачёта по этому домашнему заданию. 
-
-
-------
-### Задание 7*
-
-Изучите содержимое файла console.tf. Откройте terraform console, выполните следующие задания: 
-
-1. Напишите, какой командой можно отобразить **второй** элемент списка test_list.
-2. Найдите длину списка test_list с помощью функции length(<имя переменной>).
-3. Напишите, какой командой можно отобразить значение ключа admin из map test_map.
-4. Напишите interpolation-выражение, результатом которого будет: "John is admin for production server based on OS ubuntu-20-04 with X vcpu, Y ram and Z virtual disks", используйте данные из переменных test_list, test_map, servers и функцию length() для подстановки значений.
-
-**Примечание**: если не догадаетесь как вычленить слово "admin", погуглите: "terraform get keys of map"
-
-В качестве решения предоставьте необходимые команды и их вывод.
-
-------
-
-### Задание 8*
-1. Напишите и проверьте переменную test и полное описание ее type в соответствии со значением из terraform.tfvars:
-```
-test = [
-  {
-    "dev1" = [
-      "ssh -o 'StrictHostKeyChecking=no' ubuntu@62.84.124.117",
-      "10.0.1.7",
-    ]
-  },
-  {
-    "dev2" = [
-      "ssh -o 'StrictHostKeyChecking=no' ubuntu@84.252.140.88",
-      "10.0.2.29",
-    ]
-  },
-  {
-    "prod1" = [
-      "ssh -o 'StrictHostKeyChecking=no' ubuntu@51.250.2.101",
-      "10.0.1.30",
-    ]
-  },
-]
-```
-2. Напишите выражение в terraform console, которое позволит вычленить строку "ssh -o 'StrictHostKeyChecking=no' ubuntu@62.84.124.117"
-------
-
-------
-
-### Задание 9*
-
-Используя инструкцию https://cloud.yandex.ru/ru/docs/vpc/operations/create-nat-gateway#tf_1, настройте для ваших ВМ nat_gateway. Для проверки уберите внешний IP адрес (nat=false) у ваших ВМ и проверьте доступ в интернет с ВМ, подключившись к ней через serial console. Для подключения предварительно через ssh измените пароль пользователя: ```sudo passwd ubuntu```
-
-### Правила приёма работыДля подключения предварительно через ssh измените пароль пользователя: sudo passwd ubuntu
-В качестве результата прикрепите ссылку на MD файл с описанием выполненой работы в вашем репозитории. Так же в репозитории должен присутсвовать ваш финальный код проекта.
-
-**Важно. Удалите все созданные ресурсы**.
-
-
-### Критерии оценки
-
-Зачёт ставится, если:
-
-* выполнены все задания,
-* ответы даны в развёрнутой форме,
-* приложены соответствующие скриншоты и файлы проекта,
-* в выполненных заданиях нет противоречий и нарушения логики.
-
-На доработку работу отправят, если:
-
-* задание выполнено частично или не выполнено вообще,
-* в логике выполнения заданий есть противоречия и существенные недостатки. 
-
