--- a/02/dz-17-2.md
+++ b/02/dz-17-2.md
@@ -45,52 +45,6 @@ core_fraction=5 создаёт ВМ, которая будет иметь дос
 
 ```
 
-  variable "vm_web_name" {
-  type        = string
-  default     = "netology-develop-platform-web"
-  description = "name"
-}
-  variable "vm_web_platform" {
-  type        = string
-  default     = "standard-v1"
-  description = "platform_id"
-}
-  variable "vm_web_cores" {
-  type        = number
-  default     = "2"
-  description = "cores"
-}
-  variable "vm_web_memory" {
-  type        = number
-  default     = "1"
-  description = "memory"
-}
-  variable "vm_web_core" {
-  type        = number
-  default     = "5"
-  description = "core_fraction"
-}
-  variable "vm_web_image_id" {
-  type        = string
-  default     = "data.yandex_compute_image.ubuntu.image_id"
-  description = "image_id"
-}
-  variable "vm_web_preemptible" {
-  type        = bool
-  default     = "true"
-  description = "preemptible"
-}
-  variable "vm_web_subnet" {
-  type        = string
-  default     = "yandex_vpc_subnet.develop.id"
-  description = "subnet_id"
-}
-  variable "vm_web_nat" {
-  type        = bool
-  default     = "true"
-  description = "nat"
-}
-
 ```
 
 ### Задание 3
@@ -99,50 +53,94 @@ core_fraction=5 создаёт ВМ, которая будет иметь дос
 2. Скопируйте блок ресурса и создайте с его помощью вторую ВМ в файле main.tf: **"netology-develop-platform-db"** ,  ```cores  = 2, memory = 2, core_fraction = 20```. Объявите её переменные с префиксом **vm_db_** в том же файле ('vms_platform.tf').  ВМ должна работать в зоне "ru-central1-b"
 3. Примените изменения.
 
+```
+
+```
 
 ### Задание 4
 
 1. Объявите в файле outputs.tf **один** output , содержащий: instance_name, external_ip, fqdn для каждой из ВМ в удобном лично для вас формате.
+
+```
+output "ip-netology-develop-platform-db" { 
+  value = yandex_compute_instance.platform.network_interface[0].nat_ip_address
+}
+output "ip-netology-develop-platform-web" { 
+  value = yandex_compute_instance.platform-db.network_interface[0].nat_ip_address
+}
+```
+
 2. Примените изменения.
 
 В качестве решения приложите вывод значений ip-адресов команды ```terraform output```.
 
+![17-2-3](src/img/17-2-.png)
 
 ### Задание 5
 
 1. В файле locals.tf опишите в **одном** local-блоке имя каждой ВМ, используйте интерполяцию ${..} с НЕСКОЛЬКИМИ переменными по примеру из лекции.
+
+```
+locals {
+  web-name = "web-${var.vpc_name}-${var.vm_db_instance_name}-cf${var.vm_web_core}"
+  db-name = "db-${var.vpc_name}-${var.vm_db_instance_name}-cf${var.vm_db_core}"
+}
+```
 2. Замените переменные внутри ресурса ВМ на созданные вами local-переменные.
 3. Примените изменения.
 
+```
+name        = local.web_name
+name        = local.db_name
+```
 
 ### Задание 6
 
 1. Вместо использования трёх переменных  ".._cores",".._memory",".._core_fraction" в блоке  resources {...}, объедините их в единую map-переменную **vms_resources** и  внутри неё конфиги обеих ВМ в виде вложенного map.  
-   ```
-   пример из terraform.tfvars:
-   vms_resources = {
-     web={
-       cores=
-       memory=
-       core_fraction=
-       ...
-     },
-     db= {
-       cores=
-       memory=
-       core_fraction=
-       ...
-     }
-   }
-   ```
+
+```
+variable "vms_resources" {
+  type = map(number)
+  default = {"vm_web_resources" = {
+    cores = 2
+    memory = 1
+    core = 5
+    }
+    "vm_db_resources" = {
+    cores = 2
+    memory = 2
+    core = 20
+    }    
+  }
+}
+```
+
+```
+  resources {
+    cores         = var.vms_resources.vm_web_cores
+    memory        = var.vms_resources.vm_web_memory
+    core_fraction = var.vms_resources.vm_web_core
+  }
+
+  resources {
+    cores         = var.vms_resources.vm_db_cores
+    memory        = var.vms_resources.vm_db_memory
+    core_fraction = var.vms_resources.vm_db_core
+  } 
+```
+
 3. Создайте и используйте отдельную map переменную для блока metadata, она должна быть общая для всех ваших ВМ.
-   ```
-   пример из terraform.tfvars:
-   metadata = {
-     serial-port-enable = 1
-     ssh-keys           = "ubuntu:ssh-ed25519 AAAAC..."
-   }
-   ```  
+
+```
+variable "vms_metadata" {
+  type = map(string)
+  default = {
+    serial-port-enable = 1
+    ssh-keys           = "ubuntu:ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIIcctq4cYZC5AZ0OF/5Du8i+h0zP4gwLe8/2gk2cTh66"
+    description        = "ssh-keygen -t ed25519"
+  }
+}
+```  
   
 5. Найдите и закоментируйте все, более не используемые переменные проекта.
 6. Проверьте terraform plan. Изменений быть не должно.
