--- a/02/dz-17-2.md
+++ b/02/dz-17-2.md
@@ -74,7 +74,7 @@ output "ip-netology-develop-platform-web" {
 
 В качестве решения приложите вывод значений ip-адресов команды ```terraform output```.
 
-![17-2-3](src/img/17-2-.png)
+![17-2-3](src/img/17-2-3.png)
 
 ### Задание 5
 
