--- a/03/hw-03.md
+++ b/03/hw-03.md
@@ -1,31 +1,12 @@
-# Домашнее задание к занятию «Управляющие конструкции в коде Terraform»
-
-### Цели задания
-
-1. Отработать основные принципы и методы работы с управляющими конструкциями Terraform.
-2. Освоить работу с шаблонизатором Terraform (Interpolation Syntax).
-
-------
-
-### Чек-лист готовности к домашнему заданию
-
-1. Зарегистрирован аккаунт в Yandex Cloud. Использован промокод на грант.
-2. Установлен инструмент Yandex CLI.
-3. Доступен исходный код для выполнения задания в директории [**03/src**](https://github.com/netology-code/ter-homeworks/tree/main/03/src).
-4. Любые ВМ, использованные при выполнении задания, должны быть прерываемыми, для экономии средств.
-
-------
-
-### Внимание!! Обязательно предоставляем на проверку получившийся код в виде ссылки на ваш github-репозиторий!
-Убедитесь что ваша версия **Terraform** =1.5.Х (версия 1.6 может вызывать проблемы с Яндекс провайдером)
-Теперь пишем красивый код, хардкод значения не допустимы!
-------
+# Домашнее задание к занятию «Управляющие конструкции в коде Terraform» - Рыбакин Алексей
 
 ### Задание 1
 
 1. Изучите проект.
 2. Заполните файл personal.auto.tfvars.
 3. Инициализируйте проект, выполните код. Он выполнится, даже если доступа к preview нет.
+
+![задание 1](./ims/17-3_1.png)
 
 Примечание. Если у вас не активирован preview-доступ к функционалу «Группы безопасности» в Yandex Cloud, запросите доступ у поддержки облачного провайдера. Обычно его выдают в течение 24-х часов.
 
